fix: add missing dep, fix padding

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
     "@tauri-apps/api": "^1.1.0",
+    "@tauri-apps/cli-darwin-x64": "^1.1.1",
     "autoprefixer": "^10.4.11",
     "framer-motion": "^7.3.5",
     "next": "^12.3.0",
