--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
 .idea
-.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
@@ -31,7 +31,4 @@ dist-ssr
 tsconfig.tsbuild
 
 # Radicle
-.gitsigners
-.gitsigners
-.gitsigners
 .gitsigners
