--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.4",
+    "@heroicons/react": "^2.0.11",
     "@tauri-apps/api": "^1.1.0",
     "@tauri-apps/cli-darwin-x64": "^1.1.1",
     "autoprefixer": "^10.4.11",
