--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "autoprefixer": "^10.4.11",
     "framer-motion": "^7.3.5",
     "next": "^12.3.0",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-tippy": "^1.4.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
@@ -52,6 +54,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@tauri-apps/cli": "^1.1.1",
     "@types/node": "^18.7.18",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
