--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "next": "^12.3.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
+    "react-canvas-confetti": "^1.3.0",
     "react-dom": "^18.2.0",
-    "react-tippy": "^1.4.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
