--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: 'My Workflow'
 
 on: workflow_dispatch
 
+
 jobs:
   create-release:
     runs-on: ubuntu-20.04
@@ -42,6 +43,9 @@ jobs:
 
     runs-on: ${{ matrix.platform }}
     steps:
+    - uses: pnpm/action-setup@v2.2.2
+      with:
+        version: 6.0.2
     - uses: actions/checkout@v2
     - name: setup node
       uses: actions/setup-node@v1
